--- a/bibliography.bib
+++ b/bibliography.bib
@@ -531,6 +531,29 @@
   pmid = {31078345},
 }
 
+@manual{r,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},    
+    organization = {R Foundation for Statistical Computing},
+   address = {Vienna, Austria},
+    year = {2021},
+    url = {https://www.R-project.org/}
+  }
+  
+  @article{huddleston2014,
+  title = {Learning {{From Every Death}}},
+  author = {Huddleston, Jeanne M. and Diedrich, Daniel A. and Kinsey, Gail C. and Enzler, Mark J. and Manning, Dennis M.},
+  year = {2014},
+  month = mar,
+  journal = {Journal of Patient Safety},
+  volume = {10},
+  number = {1},
+  pages = {6},
+  issn = {1549-8417},
+  doi = {10.1097/PTS.0000000000000053},
+
+}
+
 
 @online{blank,
   author          = {},
