--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -30,7 +30,7 @@ Abstract
 
 <!-- Provide in the abstract an informative and balanced summary of
 what was done and what was found. Not more than 300 words. -->
-*Background:* Morbidity and mortality review, which aims to discover opportunities for improvement (OFI) is a cornerstone of trauma quality improvement worldwide. The process of case selection and review is time-consuming, leading many hospitals to use audit filters to automate case selection. Trauma severity models, which estimate probability of survival, have been proposed as one such audit filter. The ability of these models to predict opportunities for improvement (OFI) is not well understood. Two studies have found that they perform poorly at predicting preventable deaths, but as of yet there is no published literature that analyses the performance of these models across the board and not only in deaths. *Aim:* To evaluate how the commonly used models TRISS, NORMIT and PS are associated with, and to what extent they can predict, OFI. *Methods:* This is a retrospective registry-based cohort study at Karolinska University Hospital covering the period 2014-2021. Logistic regression was used to estimate the association between the models and OFI. Receiver operating characteristic curves with the corresponding area under the curve (AUC) were used to assess discrimination and the Integrated Calibration Index was used to assess calibration. *Results:* 5320 participants were included from a seven-year period. Results were similar for all models.  Lower probability of survival was associated with higher probability of OFI, with TRISS having the strongest association (derived OR: `r t['or']`). Predictive performance and calibration was poor across the board. TRISS had the best AUC of `r t['auc']`. NORMIT had the best calibration with an ICI of `r n['ici']`. *Conclusions:* Although low probability of survival is associated with increased odds of OFI, none of the models were able to reliably predict OFI. The use of these models as audit filters in case selection for M&M conferences is not supported by our results and may lead to over-selection. 
+*Background:* Morbidity and mortality review, which aims to discover opportunities for improvement (OFI) is a cornerstone of trauma quality improvement worldwide. The process of case selection and review is time-consuming, leading many hospitals to use audit filters to automate case selection. Trauma severity models, which estimate probability of survival, have been proposed as one such audit filter. Two studies have found that these models perform poorly at predicting preventable deaths, but the ability of these models to predict opportunities for improvement (OFI) is not well understood. *Aim:* To evaluate how the commonly used models TRISS, NORMIT and PS are associated with, and to what extent they can predict, OFI. *Methods:* This is a retrospective registry-based cohort study at Karolinska University Hospital covering the period 2014-2021. Logistic regression was used to estimate the association between the model scores and OFI. Predictive performance was measured using receiver operating characteristic curves with the corresponding area under the curve (AUC) to assess discrimination and the Integrated Calibration Index to assess calibration. *Results:* 5320 participants were included from a seven-year period. Results were similar for all models.  Lower probability of survival was associated with higher probability of OFI, with TRISS having the strongest association (derived OR: `r t['or']`). All model scores had poor predictive performance. TRISS had the best AUC of `r t['auc']`. NORMIT had the best calibration with an ICI of `r n['ici']`. *Conclusions:* Although low probability of survival is associated with increased odds of OFI, none of the models were able to reliably predict OFI. The use of these models as audit filters in case selection for M&M conferences is not supported by our results and may lead to over-selection. 
 
 Abbreviations
 =============
@@ -53,9 +53,9 @@ Trauma, defined as the clinical entity composed of physical injury and the body'
 
 The quality of trauma care is therefore a globally relevant issue with significance for a great number of people. Improvements in trauma outcomes benefit both the individual and also society at large by reducing the societal and healthcare costs of disability. The significance of the consequences and burden of trauma has been recognised by the UN, who in their Sustainable Development Goals included the aim of reducing the number of global deaths and injuries from road traffic accidents by half by 2020 [@sdg]. The importance of improving trauma care named as one of the strategies in achieving this goal. The goal was not met by 2020 [@sdg20], which is another signal that there is significant progress to be made in trauma care. 
 
-Efforts to advance the state of trauma care have been ongoing for many years. Today many trauma centres have implemented quality improvement (QI) programs, and it has been shown in the US that these programs improve outcomes [@ustqi]. QI programs use many tools, including statistical analysis and audit filters [@hakkenbrakprevdeath], but the gold standard of trauma QI is the multidisciplinary morbidity and mortality (M&M) conference. These conferences review selected patient cases and establish whether there was opportunity for improvement (OFI) in each case. 
+Efforts to advance the state of trauma care have been ongoing for many years. Today many trauma centres have implemented quality improvement (QI)<!-- Do you really need to abbreviate quality improvement? It's quite short as it is and you don't use it too much--> programs, and it has been shown in the US that these programs improve outcomes [@ustqi]. QI programs use many tools, including statistical analysis and audit filters [@hakkenbrakprevdeath], but the gold standard of trauma QI is the multidisciplinary morbidity and mortality (M&M) conference. These conferences review selected patient cases and establish whether there was opportunity for improvement (OFI) in each case. 
 
-One area that is understudied is the use of trauma severity models as audit filters in case selection for M&M conferences. These models are algorithms that estimate the probability of survival. It has been proposed that using such models as audit filters to automatically flag cases for review could improve the effectiveness of M&M conferences while also reducing their resource burden [@brohi16; @prevdeathsghorbani ]. Many hospitals have already implemented this approach [@brohi16]; however, the ability of trauma severity models to predict OFI is not well understood and will be investigated in this paper. 
+One area that is understudied is the use of trauma severity models as audit filters in case selection for M&M conferences. These models are algorithms that estimate the probability of survival. It has been proposed that using such models as audit filters to automatically flag cases for review could improve the effectiveness of M&M conferences while also reducing their resource burden [@brohi16; @prevdeathsghorbani]. Many hospitals have already implemented this approach [@brohi16]; however, the ability of trauma severity models to predict OFI is not well understood and will be investigated in this paper. 
 
 ## Morbidity and mortality conferences
 
@@ -80,7 +80,6 @@ An inherent weakness of any trauma severity model is that estimates may be unrel
 The most commonly used model worldwide is The Trauma and Injury Severity Score (TRISS) [@trissbetter], first developed in the US in 1987 [@triss] and most recently updated in 2010 [@triss2010]. TRISS is a combination index that incorporates patient age, the Injury Severity Score (ISS), the Revised Trauma Score (RTS), and whether the injury was blunt or penetrating [@triss]. One weakness of TRISS is that the RTS requires GCS on arrival at hospital, which cannot be estimated in situations where the patient has already been intubated. This gives TRISS limited value in estimating probability of survival in certain populations [@trissbetter]. Another commonly used model is the Probability of Survival (PS) score, originally developed by the Trauma Audit & Research Network (TARN) in the UK in 2007 [@tarn07]. In some ways the PS model is more complex than TRISS; it has coefficients for sex associated with age, and provides a formula that takes into account the non-linearity of ISS [@tarn07]. 
 
 In 2014 researchers in Norway released a new model, the Norwegian Survival Prediction Model in Trauma (NORMIT), that attempts to address the weaknesses of TRISS and simultaneously provide a model based on Norwegian patient populations [@normit]. NORMIT is based on the patient's age, New Injury Severity Score (NISS), comorbidities prior to traumatic injury based on the ASA physical status classification system (ASA-PS), and their RTS. NISS differs from ISS in that NISS allows for scoring of multiple injuries within the same anatomical region. Validation of NISS has shown that NISS is better at predicting mortality in trauma patients compared to ISS, especially in patients with multiple severe injuries within one anatomical region [@nissbetter]. NORMIT also provides a method to incorporate the GCS for intubated patients when calculating RTS. For patients who arrive at hospital and under general anaesthesia, the RTS is calculated based on the prehospital value prior to intubation [@normit]. NORMIT was updated in 2018 [@skagaValidatingPerformanceTRISS2018] and a validation study found that the updated NORMIT reliably predicted survival at a Swedish trauma centre but both the old and new versions of NORMIT performed worse when used at the national level [@validationnormit]. 
-
 
 ## Knowledge gap
 
@@ -264,7 +263,7 @@ Our results show an association between lower probability of survival and higher
 
 Despite this association, none of the trauma severity models we investigated are able to reliably predict OFI. The area under the curve of the receiver operating curves - a value that describes the ability of a model to discriminate between two outcomes - was around 0.65 for all three scores, which indicates that these models were not able to reliably predict OFI. We also showed that the models were poorly calibrated as to the outcomes. Intuitively, this makes sense, as these models are designed to predict death and not errors in care. These models do not take into account factors that might lead to suboptimal care - they are based on physiological and anatomical parameters that quantify the severity of an injury. Even though a higher trauma severity is associated with greater odds for OFI, these models cannot discriminate between a high trauma severity with OFI and one that has no OFI. 
 
-We showed that all three models have a low accuracy at a 0.5 cutoff. One reason for the low accuracy is the low incidence of OFI, which means that maximal accuracy is found when assigning "no OFI" to all cases, although this would obviously lead to false negatives. Either way, whether you use maximum accuracy or accuracy at a 0.5 cutoff as a metric, none of these models have significant accuracy. In real-world terms, there is no decision-making cutoff for predicted survival that would lead to an improvement in case selection - these approaches would lead to either a high number of false positives or false negatives.     
+We showed that all three models have a low accuracy at a 0.5 cutoff. One reason for the low accuracy is the low incidence of OFI, which means that maximal accuracy is found when assigning "no OFI" to all cases, although this would obviously lead to false negatives. Either way, whether you use maximum accuracy or accuracy at a 0.5 cutoff as a metric, none of these models have significant accuracy. In real-world terms, there is no decision-making cutoff for predicted survival that would lead to an improvement in case selection - these approaches would lead to either a high number of false positives or false negatives.
 
 These three models had essentially the same results, which is an expected outcome considering that they are all tools for estimating the same thing - the probability of survival. In addition, the models have a great degree of overlap in the parameters they incorporate, including GCS and age. The models we analysed are commonly-used and are sourced from three different geographical populations. The fact that they all had similar performance is a sign that investigation of other models is unlikely to lead to different results.
 
@@ -276,7 +275,7 @@ Even though our results were expected, it was still important to investigate thi
 This study is based on a patient population at a level 1 trauma centre in Stockholm, Sweden and the results are likely applicable for other level 1 trauma centres in the Nordic countries, as these countries share similarities in patient demographics, comorbidities, and injury types. This study is less generalisable for smaller trauma centres as those centres tend to manage less severe trauma and will have a different patient population. This study also has less external validity with regards to international populations that differ significantly from the one in this study, for example populations with a higher proportion of penetrating trauma. 
 
 ### Health equity
-The demographical characteristics of the participants in this study reflect the well-known demographics of trauma patients worlwide. `r dd['male']`% of participants were male and the median age was `r dd['age']`, which matches with statistics both in Sweden and globally [@globalburden]. The predominance of male patients invites one to question if female patients are less likely to receive quality care. In healthcare as in all areas, repetition leads to mastery of a skill, so an onlooker might be tempted to assume that the high volume of male patients in trauma will lead healthcare providers to superiority iin treating males, whilst treatment of female patients will be neglected. This demographical difference has precipitated research that seeks to investigate whether this presumption holds true, and several large multi-centre studies have been published that evaluated whether there is a correlation between sex and outcomes. None of these studies found a correlation beween sex and increased mortality or other serious outcomes [@croce2002; @magnotti2008; @pape2019; @trentzsch2014], and in fact one study in the Netherlands found that female sex was correlated with decreased mortality [@pape2019]. 
+The demographical characteristics of the participants in this study reflect the well-known demographics of trauma patients worlwide. `r dd['male']`% of participants were male and the median age was `r dd['age']`, which matches with statistics both in Sweden and globally [@globalburden]. The predominance of male patients invites one to question if female patients are less likely to receive quality care. In healthcare as in all areas, repetition leads to mastery of a skill, so an onlooker might be tempted to assume that the high volume of male patients in trauma will lead healthcare providers to superiority in treating males, whilst treatment of female patients will be neglected. This demographical difference has precipitated research that seeks to investigate whether this presumption holds true, and several large multi-centre studies have been published that evaluated whether there is a correlation between sex and outcomes. None of these studies found a correlation beween sex and increased mortality or other serious outcomes [@croce2002; @magnotti2008; @pape2019; @trentzsch2014], and in fact one study in the Netherlands found that female sex was correlated with decreased mortality [@pape2019]. 
 
 This study has not compared differences between the sexes, and therefore cannot comment on any relation between sex and OFI at this centre. One of the trauma severity models we investigated, PS, does include patient sex as a coefficient in predicting mortality, but we did not examine whether patient sex affects the ability of PS to predict OFI. However, there is another currently ongoing project at this hospital that compares OFI between the male and female sex cohorts. The uneven distribution of sex in this study does not make for a limitation of this study in terms of generalisability since our demographics match the distribution of sex in trauma cases both globally and in the Swedish trauma population. 
 
